--- a/styles/main.css
+++ b/styles/main.css
@@ -82,7 +82,7 @@ html {
   font-family: var(--BodyFamily);
   font-size: var(--Paragraph);
   font-weight: 400;
-  /* background-image: url(/design/desktop-design.jpg);
+  /* background-image: url(design/desktop-design.jpg);
   opacity: 0.5;
   background-repeat: no-repeat;
   background-position: top center;
@@ -198,7 +198,7 @@ header {
 }
 
 .wave1top {
-  background-image: url(/images/bg-section-top-desktop-1.svg);
+  background-image: url(images/bg-section-top-desktop-1.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -208,7 +208,7 @@ header {
 }
 
 .wave1bottom {
-  background-image: url(/images/bg-section-bottom-desktop-1.svg);
+  background-image: url(images/bg-section-bottom-desktop-1.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -218,7 +218,7 @@ header {
 }
 
 .wave2top {
-  background-image: url(/images/bg-section-top-desktop-2.svg);
+  background-image: url(images/bg-section-top-desktop-2.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -228,7 +228,7 @@ header {
 }
 
 .wave2bottom {
-  background-image: url(/images/bg-section-bottom-desktop-2.svg);
+  background-image: url(images/bg-section-bottom-desktop-2.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -238,7 +238,7 @@ header {
 }
 
 .wave3top {
-  background-image: url(/images/bg-footer-top-desktop.svg);
+  background-image: url(images/bg-footer-top-desktop.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -328,7 +328,7 @@ footer {
   .footerimg {
     height: 80px;
     width: 100%;
-    background-image: url(/images/logo-footer.svg);
+    background-image: url(./images/logo-footer.svg);
     background-position: left;
     background-size: contain;
     background-repeat: no-repeat;
@@ -345,12 +345,12 @@ footer {
     padding-inline: 20px;
 
     .phone::before {
-      content: url(/images/icon-phone.svg);
+      content: url(./images/icon-phone.svg);
       margin-right: 20px;
     }
 
     .email::before {
-      content: url(/images/icon-email.svg);
+      content: url(./images/icon-email.svg);
       margin-right: 20px;
     }
   }
@@ -624,7 +624,7 @@ footer {
   }
 
   .wave1top {
-    background-image: url(/images/bg-section-top-mobile-1.svg);
+    background-image: url(images/bg-section-top-mobile-1.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -634,7 +634,7 @@ footer {
   }
 
   .wave1bottom {
-    background-image: url(/images/bg-section-bottom-mobile-1.svg);
+    background-image: url(images/bg-section-bottom-mobile-1.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -644,7 +644,7 @@ footer {
   }
 
   .wave2top {
-    background-image: url(/images/bg-section-top-mobile-2.svg);
+    background-image: url(images/bg-section-top-mobile-2.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -654,7 +654,7 @@ footer {
   }
 
   .wave2bottom {
-    background-image: url(/images/bg-section-bottom-mobile-2.svg);
+    background-image: url(images/bg-section-bottom-mobile-2.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -664,7 +664,7 @@ footer {
   }
 
   .wave3top {
-    background-image: url(/images/bg-footer-top-mobile.svg);
+    background-image: url(images/bg-footer-top-mobile.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
